group("All") {
  deps = [
    "//src/client:clang",
    "//src/daemon:clangd",
    ":Tools",
  ]
}

group("Tools") {
  deps = [
    "//tools/args_parser",
  ]
}

if (config_for_tests) {
  group("Tests") {
    testonly = true

    deps = [
      "//src/test:unit_tests",
      "//src/third_party/leveldb:leveldb_tests",
    ]
  }
}

package_deps = [
  "//src/base:base",
  "//src/client:clang",
  "//src/client:command",
  "//src/daemon:clangd",
  "//src/daemon:config_proto",
  "//src/daemon:remote_proto",
  "//src/cache:file_cache",
  "//src/net:net",
  "//src/net:net_proto",
  "//src/perf:counter",
  "//src/perf:stat_proto",
  "//src/perf:stat_service",
  "//src/third_party/gperftools:tcmalloc",
  "//src/third_party/libcxx:c++",
  "//src/third_party/libcxxabi:c++abi",
  "//src/third_party/protobuf:protoc",
  "//src/third_party/snappy:snappy",
]

if (host_os == "linux") {
  action("deb_package") {
    script = "//build/deb_package.py"
    inputs = [
      "//build/common_package.include",
      "//build/deb_changelog.template",
      "//build/deb_control.template",
    ]
    sources = [
      "$root_gen_dir/src/base/base_pb2.py",
      "$root_gen_dir/src/daemon/configuration_pb2.py",
      "$root_gen_dir/src/daemon/remote_pb2.py",
      "$root_gen_dir/src/net/universal_pb2.py",
      "$root_gen_dir/src/perf/stat_pb2.py",
      "$root_out_dir/clang",
      "$root_out_dir/clangd",
      "$root_out_dir/libbase.so",
      "$root_out_dir/libc++.so",
      "$root_out_dir/libc++abi.so",
      "$root_out_dir/libcommand.so",
      "$root_out_dir/libcounter.so",
      "$root_out_dir/libfile_cache.so",
      "$root_out_dir/liblogging.so",
      "$root_out_dir/libnet.so",
      "$root_out_dir/libnet_proto.so",
      "$root_out_dir/libprotobuf.so",
      "$root_out_dir/libsnappy.so",
      "$root_out_dir/libstat_service.so",
      "$root_out_dir/libtcmalloc.so",
      "//build/common_package.include",
      "//build/deb_changelog.template",
      "//build/deb_control.template",
      "//build/expand_env_vars.sh",
      "//install/clangd.conf",
      "//install/debian_prerm",
      "//install/supervisord_service",
    ]
    outputs = [
      "$root_out_dir/deb/debian/control",
      "$root_out_dir/deb/debian/changelog",
      "$root_out_dir/deb/debian/files",
      "$root_out_dir/deb/debian/tmp/etc/clangd.conf",
      "$root_out_dir/deb/debian/tmp/etc/init.d/clangd",
      "$root_out_dir/deb/debian/tmp/etc/supervisor/conf.d/clangd.conf",
      "$root_out_dir/deb/debian/tmp/usr/bin/dist-clang/clang",
      "$root_out_dir/deb/debian/tmp/usr/bin/dist-clang/clang++",
      "$root_out_dir/deb/debian/tmp/usr/bin/dist-clang/clangd",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libbase.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libc++.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libc++abi.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libcommand.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libcounter.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libfile_cache.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/liblogging.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libnet.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libnet_proto.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libprotobuf.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libsnappy.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libstat_service.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libtcmalloc.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/__init__.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/base/__init__.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/base/base_pb2.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/daemon/__init__.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/daemon/configuration_pb2.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/daemon/remote_pb2.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/net/__init__.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/net/universal_pb2.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/perf/__init__.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/perf/stat_pb2.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/compiler/__init__.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/compiler/plugin_pb2.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/descriptor_database.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/descriptor_pb2.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/descriptor_pool.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/descriptor.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/__init__.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/api_implementation.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/containers.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/cpp_message.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/decoder.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/encoder.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/enum_type_wrapper.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/__init__.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/message_listener.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/python_message.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/type_checkers.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/wire_format.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/message_factory.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/message.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/pyext/cpp_message.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/pyext/__init__.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/reflection.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/service.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/service_reflection.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/symbol_database.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/text_encoding.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/text_format.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/protobuf-2.6.2rc0-py2.7.egg-info/dependency_links.txt",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/protobuf-2.6.2rc0-py2.7.egg-info/namespace_packages.txt",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/protobuf-2.6.2rc0-py2.7.egg-info/PKG-INFO",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/protobuf-2.6.2rc0-py2.7.egg-info/requires.txt",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/protobuf-2.6.2rc0-py2.7.egg-info/SOURCES.txt",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/protobuf-2.6.2rc0-py2.7.egg-info/top_level.txt",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/protobuf-2.6.2rc0-py2.7-nspkg.pth",
      "$root_out_dir/deb/debian/tmp/DEBIAN/control",
      "$root_out_dir/deb/debian/tmp/DEBIAN/prerm",
      "$root_out_dir/dist-clang_${version}_amd64.deb",
      "$root_out_dir/dist-clang_${version}_amd64.changes",
    ]
    args = [
      rebase_path("$root_out_dir"),
      "$version",
    ]

    deps = package_deps
  }

  action("rpm_package") {
    script = "//build/rpm_package.py"
    inputs = [
      "//build/common_package.include",
      "//build/rpm_spec.template",
    ]
    sources = [
      "$root_gen_dir/src/base/base_pb2.py",
      "$root_gen_dir/src/daemon/configuration_pb2.py",
      "$root_gen_dir/src/daemon/remote_pb2.py",
      "$root_gen_dir/src/net/universal_pb2.py",
      "$root_gen_dir/src/perf/stat_pb2.py",
      "$root_out_dir/clang",
      "$root_out_dir/clangd",
      "$root_out_dir/libbase.so",
      "$root_out_dir/libc++.so",
      "$root_out_dir/libc++abi.so",
      "$root_out_dir/libcommand.so",
      "$root_out_dir/libcounter.so",
      "$root_out_dir/libfile_cache.so",
      "$root_out_dir/liblogging.so",
      "$root_out_dir/libnet.so",
      "$root_out_dir/libnet_proto.so",
      "$root_out_dir/libprotobuf.so",
      "$root_out_dir/libsnappy.so",
      "$root_out_dir/libstat_service.so",
      "$root_out_dir/libtcmalloc.so",
      "//build/common_package.include",
      "//build/expand_env_vars.sh",
      "//build/rpm_spec.template",
      "//install/clangd.conf",
      "//install/systemd_service",
    ]
    outputs = [
      "$root_out_dir/rpm.spec",
      "$root_out_dir/rpm/etc/clangd.conf",
      "$root_out_dir/rpm/usr/bin/dist-clang/clang",
      "$root_out_dir/rpm/usr/bin/dist-clang/clang++",
      "$root_out_dir/rpm/usr/bin/dist-clang/clangd",
      "$root_out_dir/rpm/usr/lib/dist-clang/libbase.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libc++.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libc++abi.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libcommand.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libcounter.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libfile_cache.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/liblogging.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libnet.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libnet_proto.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libprotobuf.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libsnappy.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libstat_service.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libtcmalloc.so",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/__init__.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/base/__init__.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/base/base_pb2.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/daemon/__init__.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/daemon/configuration_pb2.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/daemon/remote_pb2.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/net/__init__.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/net/universal_pb2.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/perf/__init__.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/perf/stat_pb2.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/compiler/__init__.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/compiler/plugin_pb2.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/descriptor_database.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/descriptor_pb2.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/descriptor_pool.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/descriptor.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/__init__.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/api_implementation.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/containers.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/cpp_message.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/decoder.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/encoder.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/enum_type_wrapper.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/__init__.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/message_listener.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/python_message.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/type_checkers.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/wire_format.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/message_factory.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/message.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/pyext/cpp_message.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/pyext/__init__.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/reflection.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/service.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/service_reflection.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/symbol_database.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/text_encoding.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/text_format.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/protobuf-2.6.2rc0-py2.7.egg-info/dependency_links.txt",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/protobuf-2.6.2rc0-py2.7.egg-info/namespace_packages.txt",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/protobuf-2.6.2rc0-py2.7.egg-info/PKG-INFO",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/protobuf-2.6.2rc0-py2.7.egg-info/requires.txt",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/protobuf-2.6.2rc0-py2.7.egg-info/SOURCES.txt",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/protobuf-2.6.2rc0-py2.7.egg-info/top_level.txt",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/protobuf-2.6.2rc0-py2.7-nspkg.pth",
      "$root_out_dir/rpm/usr/lib/systemd/system/clangd.service",
      "$root_out_dir/rpmbuild/RPMS/x86_64/dist-clang-${version}-1.x86_64.rpm",
    ]
    args = [
      rebase_path("$root_out_dir"),
      "$version",
    ]

    deps = package_deps
  }
}

if (host_os == "mac") {
  action("pkg_package") {
    script = "//build/pkg_package.py"
    sources = [
      "$root_gen_dir/src/base/base_pb2.py",
      "$root_gen_dir/src/daemon/configuration_pb2.py",
      "$root_gen_dir/src/daemon/remote_pb2.py",
      "$root_gen_dir/src/net/universal_pb2.py",
      "$root_gen_dir/src/perf/stat_pb2.py",
      "$root_out_dir/clang",
      "$root_out_dir/clangd",
      "$root_out_dir/libbase.dylib",
      "$root_out_dir/libc++.dylib",
      "$root_out_dir/libc++abi.dylib",
      "$root_out_dir/libcommand.dylib",
      "$root_out_dir/libcounter.dylib",
      "$root_out_dir/libfile_cache.dylib",
      "$root_out_dir/liblogging.dylib",
      "$root_out_dir/libnet.dylib",
      "$root_out_dir/libnet_proto.dylib",
      "$root_out_dir/libprotobuf.dylib",
      "$root_out_dir/libsnappy.dylib",
      "$root_out_dir/libstat_service.dylib",
      "//build/common_package.include",
      "//build/luggage_makefile.template",
      "//install/clangd.conf",
      "//install/launchd_service",
    ]
    outputs = [
      "$root_out_dir/Makefile",
      "$root_out_dir/pkg/etc/clangd.conf",
      "$root_out_dir/pkg/usr/local/bin/dist-clang/clang",
      "$root_out_dir/pkg/usr/local/bin/dist-clang/clang++",
      "$root_out_dir/pkg/usr/local/bin/dist-clang/clangd",
      "$root_out_dir/pkg/usr/local/lib/dist-clang/libbase.dylib",
      "$root_out_dir/pkg/usr/local/lib/dist-clang/libc++.dylib",
      "$root_out_dir/pkg/usr/local/lib/dist-clang/libc++abi.dylib",
      "$root_out_dir/pkg/usr/local/lib/dist-clang/libcommand.dylib",
      "$root_out_dir/pkg/usr/local/lib/dist-clang/libcounter.dylib",
      "$root_out_dir/pkg/usr/local/lib/dist-clang/libfile_cache.dylib",
      "$root_out_dir/pkg/usr/local/lib/dist-clang/liblogging.dylib",
      "$root_out_dir/pkg/usr/local/lib/dist-clang/libnet.dylib",
      "$root_out_dir/pkg/usr/local/lib/dist-clang/libnet_proto.dylib",
      "$root_out_dir/pkg/usr/local/lib/dist-clang/libprotobuf.dylib",
      "$root_out_dir/pkg/usr/local/lib/dist-clang/libsnappy.dylib",
      "$root_out_dir/pkg/usr/local/lib/dist-clang/libstat_service.dylib",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/__init__.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/base/__init__.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/base/base_pb2.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/daemon/__init__.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/daemon/configuration_pb2.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/daemon/remote_pb2.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/net/__init__.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/net/universal_pb2.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/perf/__init__.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/perf/stat_pb2.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/compiler/__init__.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/compiler/plugin_pb2.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/descriptor_database.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/descriptor_pb2.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/descriptor_pool.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/descriptor.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/__init__.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/internal/api_implementation.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/internal/containers.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/internal/cpp_message.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/internal/decoder.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/internal/encoder.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/internal/enum_type_wrapper.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/internal/__init__.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/internal/message_listener.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/internal/python_message.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/internal/type_checkers.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/internal/wire_format.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/message_factory.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/message.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/pyext/cpp_message.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/pyext/__init__.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/reflection.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/service.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/service_reflection.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/symbol_database.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/text_encoding.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/google/protobuf/text_format.py",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/protobuf-2.6.2rc0-py2.7.egg-info/dependency_links.txt",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/protobuf-2.6.2rc0-py2.7.egg-info/namespace_packages.txt",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/protobuf-2.6.2rc0-py2.7.egg-info/PKG-INFO",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/protobuf-2.6.2rc0-py2.7.egg-info/requires.txt",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/protobuf-2.6.2rc0-py2.7.egg-info/SOURCES.txt",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/protobuf-2.6.2rc0-py2.7.egg-info/top_level.txt",
      "$root_out_dir/pkg/Library/Python/2.7/site-packages/dist_clang/protobuf-2.6.2rc0-py2.7-nspkg.pth",
      "$root_out_dir/pkg/Library/LaunchDaemons/ru.yandex.clangd.plist",
    ]
    args = [
      rebase_path("$root_out_dir"),
      "$version",
    ]

    deps = package_deps
  }
}
