visibility = [
  "//src/base/*",
  "//src/cache/*",
  "//src/client/*",
  "//src/daemon/*",
  "//src/net/*",
  "//src/perf/*",
  "//src/test/*",
]

shared_library("base") {
  sources = [
    "aliases.h",
    "assert.h",
    "assert_linux.cc",
    "assert_mac.cc",
    "assert_win.cc",
    "attributes.h",
    "c_utils.h",
    "c_utils_forward.h",
    "c_utils_posix.h",
    "c_utils_win.h",
    "const_string.cc",
    "const_string.h",
    "constants.cc",
    "constants.h",
    "empty_lambda.h",
    "file/data.cc",
    "file/data.h",
    "file/epoll_linux.cc",
    "file/epoll_linux.h",
    "file/handle_posix.cc",
    "file/handle_posix.h",
    "file/handle_win.cc",
    "file/handle_win.h",
    "file/pipe.h",
    "file/pipe_linux.cc",
    "file/pipe_mac.cc",
    "file_utils.cc",
    "file_utils.h",
    "future.h",
    "locked_queue.h",
    "process.cc",
    "process.h",
    "process_forward.h",
    "process_impl.cc",
    "process_impl.h",
    "process_impl_linux.cc",
    "process_impl_mac.cc",
    "queue_aggregator.h",
    "stl_include.h",
    "string_utils.h",
    "temporary_dir_posix.cc",
    "temporary_dir.h",
    "testable.h",
    "thread.h",
    "thread_fixed.h",
    "thread_pool.cc",
    "thread_pool.h",
    "worker_pool.cc",
    "worker_pool.h",
  ]

  public = [
    "aliases.h",
    "assert.h",
    "attributes.h",
    "c_utils.h",
    "const_string.h",
    "constants.h",
    "empty_lambda.h",
    "file/data.h",
    "file/epoll_linux.h",
    "file/handle_posix.h",
    "file/handle_win.h",
    "file/pipe.h",
    "file_utils.h",
    "future.h",
    "locked_queue.h",
    "process.h",
    "process_forward.h",
    "process_impl.h",
    "queue_aggregator.h",
    "string_utils.h",
    "temporary_dir.h",
    "testable.h",
    "thread.h",
    "thread_fixed.h",
    "thread_pool.h",
    "worker_pool.h",
  ]

  public_deps = [ ":logging" ]

  allow_circular_includes_from = [ ":logging" ]
}

shared_library("logging") {
  # TODO: upstream ability to change logging facility for gtest.
  visibility += [ "//src/third_party/gtest:gtest" ]

  sources = [
    "logging.cc",
    "logging.h",
    "using_log.h",
  ]
}
