import("//build/template/protobuf.gni")

# Separate source set for unit-tests.
source_set("client") {
  visibility += [
    "//src/test:unit_tests",
    "//tools/clang",
  ]

  sources = [
    "clang.cc",
    "clang.h",
  ]

  deps += [
    ":command",
    "//src/base:base",
    "//src/base:logging",
    "//src/net:net",
    "//src/net:net_proto",
  ]
}

source_set("command") {
  visibility += [ "//src/test:unit_tests" ]

  sources = [
    "clang_command.cc",
    "clang_command.hh",
    "clean_command.cc",
    "clean_command.hh",
    "command.cc",
    "command.hh",
    "driver_command.cc",
    "driver_command.hh",
  ]

  deps += [
    "//src/base",
    "//src/base:logging",
    "//src/third_party/clang",
  ]
}

source_set("configuration") {
  visibility += [
    "//src/test:unit_tests",
    "//tools/args_parser",
    "//tools/clang",
  ]

  sources = [
    "configuration.cc",
    "configuration.hh",
  ]

  deps += [
    ":config_proto",
    "//src/base:base",
    "//src/base:logging",
  ]
}

protobuf("config_proto") {
  visibility = [ "//tools/args_parser" ]

  sources = [
    "configuration.proto",
  ]
}
