executable("clangd") {
  visibility = [ "//:All" ]

  sources = [
    "clangd_main.cc",
  ]

  deps += [
    ":configuration",
    ":daemon",
    "//src/base:base",
    "//src/base:logging",
  ]
}

source_set("daemon") {
  visibility = [
    ":*",
    "//src/test:unit_tests",
  ]

  sources = [
    "absorber.cc",
    "absorber.h",
    "base_daemon.cc",
    "base_daemon.h",
    "emitter.cc",
    "emitter.h",
  ]

  deps += [
    ":configuration",
    "//src/base:base",
    "//src/base:logging",
    "//src/cache:file_cache",
    "//src/net:net",
    "//src/proto:proto",
    "//src/third_party/protobuf:protobuf",
  ]
}

shared_library("configuration") {
  output_name = "conf_daemon"

  visibility = [
    ":*",
    "//src/test:unit_tests",
  ]

  sources = [
    "configuration.cc",
    "configuration.h",
    "configuration.pb.cc",
    "configuration.pb.h",
    "configuration.proto",
  ]

  configs += [ "//build/config:version" ]
  if (!config_for_tests) {
    configs -= [ "//build/config:no_rtti" ]
  }

  deps += [
    "//src/base:base",
    "//src/base:logging",
    "//src/third_party/protobuf:protobuf",
    "//src/third_party/tclap:tclap",
  ]

  public_deps = [
    "//src/proto:proto",
  ]
}
