shared_library("file_cache") {
  sources = [
    "database.cc",
    "database.h",
    "file_cache.cc",
    "file_cache.h",
  ]

  deps += [
    "//src/base:base",
    "//src/base:logging",
    "//src/third_party/kyoto-cabinet:kyotocabinet",
    ":hook",
    ":manifest",
  ]
}

shared_library("hook") {
  sources = [
    "hook_open.c",
  ]

  defines = [
    "_GNU_SOURCE",
  ]

  libs = [
    "dl",
  ]

  hard_dep = true
}

shared_library("manifest") {
  sources = [
    "manifest.pb.cc",
    "manifest.pb.h",
    "manifest.proto",
    "manifest_utils.cc",
    "manifest_utils.h",
  ]

  if (!config_for_tests) {
    configs -= [ "//build/config:no_rtti" ]
  }

  deps += [
    "//src/third_party/protobuf:protobuf",
  ]
}
