shared_library("file_cache") {
  sources = [
    "database_leveldb.cc",
    "database_leveldb.h",
    "file_cache.cc",
    "file_cache.h",
  ]

  deps += [
    ":manifest",
    "//src/base:base",
    "//src/base:logging",
    "//src/third_party/leveldb:leveldb",
    "//src/third_party/protobuf:protobuf",
    "//src/third_party/snappy:snappy",
  ]
}

shared_library("manifest") {
  sources = [
    "manifest.pb.cc",
    "manifest.pb.h",
    "manifest.proto",
    "manifest_utils.cc",
    "manifest_utils.h",
  ]

  if (!config_for_tests) {
    configs -= [ "//build/config:no_rtti" ]
  }

  deps += [
    "//src/third_party/protobuf:protobuf",
  ]
}
