shared_library("net") {
  visibility = [
    "//src/client:*",
    "//src/daemon:*",
    "//src/test:unit_tests",
  ]

  sources = [
    "connection.cc",
    "connection.h",
    "connection_forward.h",
    "connection_impl.cc",
    "connection_impl.h",
    "end_point.cc",
    "end_point.h",
    "end_point_resolver.cc",
    "end_point_resolver.h",
    "event_loop.cc",
    "event_loop.h",
    "event_loop_linux.cc",
    "event_loop_linux.h",
    "event_loop_mac.cc",
    "event_loop_mac.h",
    "network_service.h",
    "network_service_impl.cc",
    "network_service_impl.h",
    "network_service_linux.cc",
    "network_service_mac.cc",
    "passive.cc",
    "passive.h",
    "socket.cc",
    "socket.h",
  ]

  deps += [
    "//src/base:base",
    "//src/base:logging",
    "//src/perf:counter",
    "//src/proto:proto",
    "//src/third_party/protobuf:protobuf",
  ]
}
