import("//build/template/protobuf.gni")

shared_library("counter") {
  sources = [
    "counter.h",
    "log_reporter.cc",
    "log_reporter.h",
    "stat_reporter.cc",
    "stat_reporter.h",
  ]

  deps += [
    ":stat_service",
    "//src/base:base",
    "//src/base:logging",
  ]
}

shared_library("stat_service") {
  sources = [
    "stat_service.cc",
    "stat_service.h",
  ]

  deps += [
    ":stat_proto",
    "//src/base:base",
  ]
}

protobuf("stat_proto") {
  sources = [
    "stat.proto",
  ]
}
