shared_library("proto") {
  sources = [
    "base.pb.cc",
    "base.pb.h",
    "base.proto",
    "remote.pb.cc",
    "remote.pb.h",
    "remote.proto",
    "stats.pb.cc",
    "stats.pb.h",
    "stats.proto",
  ]

  if (!config_for_tests) {
    configs -= [ "//build/config:no_rtti" ]
  }

  deps += [
    "//src/third_party/protobuf:protobuf",
  ]
}
