shared_library("proto") {
  visibility = [
    "//src/client:*",
    "//src/daemon:*",
    "//src/net:*",
    "//src/test:unit_tests",
  ]

  sources = [
    "base.pb.cc",
    "base.pb.h",
    "base.proto",
    "remote.pb.cc",
    "remote.pb.h",
    "remote.proto",
  ]

  if (!config_for_tests) {
    configs -= [ "//build/config:no_rtti" ]
  }

  deps += [ "//src/perf:proto" ]

  public_deps = [
    "//src/third_party/protobuf:protobuf",
  ]
}
